--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     <div class="container mx-auto max-w-3xl px-4 py-8 md:py-12">
         
         <header class="text-center mb-12">
-            <h1 class="text-3xl md:text-4xl font-extrabold text-slate-800">Assistente Lidera para<br>Análise Comportamental DISC!</h1>
+            <h1 class="text-3xl md:text-4xl font-extrabold text-slate-800">Assistente para Análise Comportamental DISC!</h1>
             <p class="text-base md:text-lg text-slate-600 mt-2">A <b>Lidera Assessments®</b> é a única empresa no Brasil com avaliações 99% válidas e mapeamento comportamental com 6 avaliações integradas.</p>
         </header>
 
